[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liquidity-os-collector"
version = "0.1.0"
description = "Collector Service for Liquidity OS — periodic DEX data ingestion"
requires-python = ">=3.11"
authors = [
    { name = "Liquidity OS Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "liquidity-os-shared>=0.1.0",
    "liquidity-os-decision-log>=0.1.0",
    "liquidity-os-database>=0.1.0",
    "liquidity-os-meteora>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100
